# curator

./: .gitignore  README.md  client-credentials-flow.py  config.py  requirements.txt  spotify-util.py
app/: config.py  main.py
app/api/: auth.py
client/: package-lock.json  package.json  tsconfig.json
client/public/: index.html
client/src/: App.vue  global.css  index.html  main.js
curator/: config.py  main.py  pyproject.toml  requirements.txt
curator/api/: auth.py
curator/templates/: index.html
server/: auth.py  main.py  requirements.txt
