[tool.poetry]
name = "curator"
version = "0.1.0"
description = ""
authors = ["Alec Gillis <alec.d.gillis@gmail.com>"]
readme = "README.md"
packages = [{include = "curator"}]

[tool.poetry.dependencies]
python = "^3.8.0"
fastapi = "^0.111.0"
requests = "^2.32.3"
uvicorn = "^0.30.1"
python-dotenv = "^1.0.1"
jinja2 = "^3.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"