[tool.poetry]
name = "curator"
version = "0.1.0"
description = ""
authors = ["Alec Gillis <alec.d.gillis@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "3.12.4"
fastapi = "0.111.1"
requests = "2.32.3"
uvicorn = "0.30.3"
python-dotenv = "1.0.1"
jinja2 = "3.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"